[package]
name = "embedding_service"
version = "0.1.0"
edition = "2021"
authors = ["FastEmbed Service Contributors"]
description = "A fast, local text embedding service using FastEmbed and ONNX Runtime"
license = "MIT"
repository = "https://github.com/101t/embedding_service"
homepage = "https://github.com/101t/embedding_service"
documentation = "https://github.com/101t/embedding_service#readme"
readme = "README.md"
keywords = ["embedding", "nlp", "machine-learning", "api", "fastembed"]
categories = ["science", "api-bindings", "web-programming"]
rust-version = "1.75"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastembed = "5.3.1"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4.29"
once_cell = "1.19"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
